@@ -166,7 +166,11 @@ EXPORTS
 	des_ecb_encrypt
 	des_new_random_key
 	des_key_sched
+	des_pcbc_encrypt
+	des_quad_cksum
+	des_string_to_key
 	des_set_random_generator_seed
+	profile_get_values
 	krb5_random_confounder
 	krb5_size_opaque
 	krb5_internalize_opaque
