@@ -1,3 +1,10 @@
+Mon Feb 17 19:40:55 1997  Richard Basch  <basch@lehman.com>
+
+	* Makefile.in: Build krb4 library under Win16/Win32
+	* krb4_16.def krb4_32.def: DLL definition files for krb4 library
+	* krb5_16.def krb5_32.def: Export various des routines (krb4 dll)
+	* win_glue.c: krb4 library support added
+
 Fri Feb 14 16:40:03 1997  Richard Basch  <basch@lehman.com>
 
 	* Makefile.in: Build separate ComErr DLL
